dev.log

> pptx-translator@0.1.0 dev
> next dev

[dotenv@17.2.1] injecting env (2) from .env.build -- tip: âš™ï¸  suppress all logs with { quiet: true }
[dotenv@17.2.1] injecting env (0) from .env.build -- tip: âš™ï¸  suppress all logs with { quiet: true }
   â–² Next.js 15.4.6
   - Local:        http://localhost:3000
   - Network:      http://192.168.11.8:3000
   - Environments: .env.local, .env
   - Experiments (use with caution):
     Â· serverActions

 âœ“ Starting...
 âœ“ Ready in 1199ms
(node:43885) [DEP_WEBPACK_EXTERNALS_FUNCTION_PARAMETERS] DeprecationWarning: The externals-function should be defined like ({context, request}, cb) => { ... }
(Use `node --trace-deprecation ...` to show where the warning was created)
 âœ“ Compiled /middleware in 123ms (225 modules)
 â—‹ Compiling / ...
 âœ“ Compiled / in 1244ms (1246 modules)
(node:43885) [DEP0040] DeprecationWarning: The `punycode` module is deprecated. Please use a userland alternative instead.
 HEAD / 200 in 1521ms
 âœ“ Compiled in 154ms (352 modules)
 âœ“ Compiled in 324ms (1246 modules)
 âœ“ Compiled in 119ms (352 modules)
 âœ“ Compiled in 62ms (563 modules)
 âœ“ Compiled /test-download in 169ms (1234 modules)
 GET /test-download 200 in 315ms
 âœ“ Compiled in 122ms (352 modules)
 âœ“ Compiled in 5ms
 âœ“ Compiled in 45ms (563 modules)
 â¨¯ Module not found: SyntaxError: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/package.json (directory description file): SyntaxError: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/package.json (directory description file): SyntaxError: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/package.json (directory description file): SyntaxError: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/package.json (directory description file): SyntaxError: Expected double-quoted property name in JSON at position 3042 (line 44 column 1)
 â¨¯ Module not found: SyntaxError: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/package.json (directory description file): SyntaxError: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/package.json (directory description file): SyntaxError: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/package.json (directory description file): SyntaxError: Expected double-quoted property name in JSON at position 3042 (line 44 column 1)
<w> [webpack.cache.PackFileCacheStrategy] Serializing big strings (108kiB) impacts deserialization performance (consider using Buffer instead and decode when needed)
 â¨¯ ./src/app/globals.css:7:9
Syntax error: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/src/app/globals.css Unknown word

  5 | @layer base {
  6 |   :root {
> 7 | <<<<<<< HEAD
    |         ^
  8 |     /* Design System Colors */
  9 |     --primary: #2563eb;
 â¨¯ ./src/app/globals.css
Syntax error: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/src/app/globals.css Unknown word (7:9)

  5 | @layer base {
  6 |   :root {
> 7 | <<<<<<< HEAD
    |         ^
  8 |     /* Design System Colors */
  9 |     --primary: #2563eb;
-- inner error --
Syntax error: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/src/app/globals.css Unknown word (7:9)

  5 | @layer base {
  6 |   :root {
> 7 | <<<<<<< HEAD
    |         ^
  8 |     /* Design System Colors */
  9 |     --primary: #2563eb;
Generated code for /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[2]!/Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[3]!/Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/src/app/globals.css

Import trace for requested module:
./src/app/globals.css
 â¨¯ ./src/app/globals.css
Syntax error: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/src/app/globals.css Unknown word (7:9)

  5 | @layer base {
  6 |   :root {
> 7 | <<<<<<< HEAD
    |         ^
  8 |     /* Design System Colors */
  9 |     --primary: #2563eb;
-- inner error --
Syntax error: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/src/app/globals.css Unknown word (7:9)

  5 | @layer base {
  6 |   :root {
> 7 | <<<<<<< HEAD
    |         ^
  8 |     /* Design System Colors */
  9 |     --primary: #2563eb;
Generated code for /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[2]!/Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[3]!/Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/src/app/globals.css

Import trace for requested module:
./src/app/globals.css
 â¨¯ ./src/app/globals.css
Syntax error: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/src/app/globals.css Unknown word (7:9)

  5 | @layer base {
  6 |   :root {
> 7 | <<<<<<< HEAD
    |         ^
  8 |     /* Design System Colors */
  9 |     --primary: #2563eb;
-- inner error --
Syntax error: /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/src/app/globals.css Unknown word (7:9)

  5 | @layer base {
  6 |   :root {
> 7 | <<<<<<< HEAD
    |         ^
  8 |     /* Design System Colors */
  9 |     --primary: #2563eb;
Generated code for /Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[2]!/Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[3]!/Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/src/app/globals.css

Import trace for requested module:
./src/app/globals.css
 â¨¯ ./src/components/dashboard/DashboardView.tsx:5:1
Module not found: Can't resolve '@/app/actions/auth'
  3 | import { useState, useEffect } from 'react';
  4 | import { translateFileAction, deleteFileAction } from '@/app/actions/dashboard';
> 5 | import { logoutAction } from '@/app/actions/auth';
    | ^
  6 | import Link from 'next/link';
  7 | import { createClient } from '@/lib/supabase/client';
  8 | import { useRouter } from 'next/navigation';

https://nextjs.org/docs/messages/module-not-found

Import trace for requested module:
./src/hooks/usePreload.ts
./src/components/PreloadProvider.tsx
 â¨¯ ./src/components/dashboard/DashboardView.tsx:5:1
Module not found: Can't resolve '@/app/actions/auth'
  3 | import { useState, useEffect } from 'react';
  4 | import { translateFileAction, deleteFileAction } from '@/app/actions/dashboard';
> 5 | import { logoutAction } from '@/app/actions/auth';
    | ^
  6 | import Link from 'next/link';
  7 | import { createClient } from '@/lib/supabase/client';
  8 | import { useRouter } from 'next/navigation';

https://nextjs.org/docs/messages/module-not-found

Import trace for requested module:
./src/hooks/usePreload.ts
./src/components/PreloadProvider.tsx
 â¨¯ ./src/lib/security/csrf.ts
Error:   [31mx[0m You're importing a component that needs "next/headers". That only works in a Server Component which is not supported in the pages/ directory. Read more: https://nextjs.org/docs/app/building-your-application/rendering/server-components
  [31m|[0m

   ,-[[36;1;4m/Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/src/lib/security/csrf.ts[0m:2:1]
 [2m1[0m | import { randomBytes } from 'crypto';
 [2m2[0m | import { cookies } from 'next/headers';
   : [35;1m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m
 [2m3[0m | import { NextRequest, NextResponse } from 'next/server';
 [2m4[0m | 
 [2m5[0m | export const CSRF_TOKEN_NAME = 'csrf-token';
   `----

Import trace for requested module:
./src/lib/security/csrf.ts
./src/components/ErrorBoundary.tsx
 â¨¯ ./src/lib/security/csrf.ts
Error:   [31mx[0m You're importing a component that needs "next/headers". That only works in a Server Component which is not supported in the pages/ directory. Read more: https://nextjs.org/docs/app/building-your-application/rendering/server-components
  [31m|[0m

   ,-[[36;1;4m/Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/src/lib/security/csrf.ts[0m:2:1]
 [2m1[0m | import { randomBytes } from 'crypto';
 [2m2[0m | import { cookies } from 'next/headers';
   : [35;1m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m
 [2m3[0m | import { NextRequest, NextResponse } from 'next/server';
 [2m4[0m | 
 [2m5[0m | export const CSRF_TOKEN_NAME = 'csrf-token';
   `----

Import trace for requested module:
./src/lib/security/csrf.ts
./src/components/ErrorBoundary.tsx
 â¨¯ ./src/lib/security/csrf.ts
Error:   [31mx[0m You're importing a component that needs "next/headers". That only works in a Server Component which is not supported in the pages/ directory. Read more: https://nextjs.org/docs/app/building-your-application/rendering/server-components
  [31m|[0m

   ,-[[36;1;4m/Users/yusuketsunoda/Documents/cursor/ppttrans/ppt-trans/src/lib/security/csrf.ts[0m:2:1]
 [2m1[0m | import { randomBytes } from 'crypto';
 [2m2[0m | import { cookies } from 'next/headers';
   : [35;1m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m
 [2m3[0m | import { NextRequest, NextResponse } from 'next/server';
 [2m4[0m | 
 [2m5[0m | export const CSRF_TOKEN_NAME = 'csrf-token';
   `----

Import trace for requested module:
./src/lib/security/csrf.ts
./src/components/ErrorBoundary.tsx
